--- a/app/assets/stylesheets/_flash_messages.scss
+++ b/app/assets/stylesheets/_flash_messages.scss
@@ -4,7 +4,7 @@
 
 .flash {
   padding: 15px;
-  
+
   ul {
     margin: 0;
     padding: 0;
@@ -32,15 +32,34 @@
 }
 
 
+// This styles the flash message on the login form
 .flash-alert {
-    background-color: rgba(0,170,163,0.5);
+    // background-color: rgba(0,170,163,0.5);
     position: absolute;
-    top: 65px;
-    width: 50%;
-    left: 0;
-    right: 0;
-    margin-left: auto;
-    margin-right: auto;
-    z-index: 1;
-    text-align: center;
+    // top: 65px;
+    // width: 50%;
+    // left: 0;
+    // right: 0;
+    // margin-left: auto;
+    // margin-right: auto;
+    // z-index: 1;
+    // text-align: center;
+
+    background-color: $white;
+    left:20%;
+    padding: 5px 10px ;
+    z-index: 5;
+    border-style: solid;
+    border-width: 0;
+    border-radius: 2px;
+    top: 196px;
+    color: $black;
+
+    @include breakpoint(small) {
+        left:28%;
+    }
+
+    @include breakpoint(medium) {
+        left:36%;
+    }
 }
