sorting css files and bit of updates

--- a/app/assets/stylesheets/_contributions.scss
+++ b/app/assets/stylesheets/_contributions.scss
@@ -1,12 +1,12 @@
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
-/* - - - - - - - - - - - - - - - - - - - - - -  - - - Contributions - - -  - - - - - - - - - - - - - - - - - - - - - - -  */
+/* - - - - - - - - - - - - - - - - - - - - Contribution Admin view - - - - - - - - - - - - - - - - - - - - - - - -  */
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
 
 .main-view {
 	background-color: rgba(0,0,0, 0.5);
 	width: 90%;
 	position: absolute;
-	top:220px;
+	top:100px;
 	left:0;
     	right:0;	
     	margin-left:auto;
