--- a/app/assets/stylesheets/shared/_forms.scss
+++ b/app/assets/stylesheets/shared/_forms.scss
@@ -390,9 +390,9 @@
 	}
 }
 
-// triangle for login - invalid sername/password error message box
+// triangle for login - invalid surname/password error message box
 .error-triangle4 {
-	top: 39px;
+	top: 72px;
 
 	@include breakpoint(small) {
 		top: 39px;
