--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -3,8 +3,9 @@
           <%= render 'logo' %>
         
           <%#= render 'search' %> 
-          
-          <%= render 'tags' %>
+	<% if current_page?('/') or current_page?('/posts') or current_page?('/profile') or current_page?('/top_videos') or current_page?('/latest') %>
+          		<%= render 'tags' %>
+          	<% end %>
 
           <%= render 'extra' %>
 
