--- a/app/views/application/_static_header.html.erb
+++ b/app/views/application/_static_header.html.erb
@@ -1,6 +1,8 @@
 <div class="header" onmouseover="document.body.style.overflow='hidden';" onmouseout="document.body.style.overflow='auto';">
       <div class="nav-down">
-          <%= render 'logo' %>        
+          <%= render 'logo' %>  
+
+          <h2 class="static-page-header"><%= @title %></h2>      
 
           <%= render 'extra' %>
 
