--- a/app/assets/stylesheets/_static_pages.scss
+++ b/app/assets/stylesheets/_static_pages.scss
@@ -1,26 +1,32 @@
 .static-page-header {
       position: absolute;
-      width:500px;
+      width:50%;
       text-align: center;
-      font-size: 2.2rem;
+      font-size: 1.8rem;
       padding: 0;
-      margin-top: 2vh;
+      margin-top: 15px;
+      margin-bottom: 0;
       left:0;
       right:0;
       margin-left:auto;
       margin-right:auto;
-      font-weight:400;
+      font-weight:300;
 }
 
 
 .about-content, .contact-content, .help-content , .copyright-content {
-	position: absolute;
-	width:60%;
-	font-size: 1.25rem;
-	top:15vh;
-	text-align: center;
-	left:0;
-                right:0;
-                margin-left:auto;
-                margin-right:auto;
+      position: absolute;
+      width:90%;
+      font-size: 1rem;
+      top:100px;
+      text-align: center;
+      left:0;
+      right:0;
+      margin-left:auto;
+      margin-right:auto;
+      
+      @include breakpoint(small) {
+            width:50%
+
+      }
 }
