--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -10,11 +10,11 @@
                  <% if current_user.try(:admin?) %>
                       <li><%= link_to 'New Post' , new_post_path , class: 'new-post' %></li>
                       <li><%= link_to 'New Category' , new_category_path , class: 'new-post' %></li>
+                      <li><%= link_to 'Contributions' , contributions_path , class: 'new-post' %></li>
                   <%end%>            
             </ul>
             <ul>
                   <div class="static-links">
-
                     <li><div class="static-pages"><%= nav_link_to 'About', application_about_path %></div></li>
                     <li><div class="static-pages"><%= nav_link_to 'Help', application_help_path %></div></li>
                     <li><div class="static-pages"><%= nav_link_to 'Contact Us', application_contact_us_path %></div></li>
