--- a/app/assets/stylesheets/_tags.scss
+++ b/app/assets/stylesheets/_tags.scss
@@ -83,7 +83,7 @@
       li {
         list-style:none;
         display:inline-block;
-        margin: 5px;
+        margin: 10px 5px;
         
          .selected {
           color:$teal;
