--- a/app/assets/stylesheets/_forms.scss
+++ b/app/assets/stylesheets/_forms.scss
@@ -328,7 +328,7 @@
 	}
 }
 
-
+// triangles for for error message boxes
 .error-triangle, .error-triangle2, .error-triangle3, .error-triangle4 {
 	width: 0;
 	height: 0;
@@ -348,7 +348,7 @@
 	}
 }
 
-// triangle for contributions - URL error message boxes
+// triangles for contributions - URL error message boxes
 .error-triangle {
 	top: 235px;
 
