styling changes and html bull

--- a/app/views/posts/_short_cover.html.erb
+++ b/app/views/posts/_short_cover.html.erb
@@ -2,14 +2,14 @@
                 <div class="blue-img-cover"></div>
                 
            <% if current_page?('/profile') %>
-           	<%= image_tag('cover-photo-min', class: 'cover-photo-img') %> 
+           	<%= image_tag('blurred-cover-photo', class: 'cover-photo-img') %> 
            <% elsif params[:name].present?%>
            	<%= image_tag(params[:name].downcase , class: 'cover-photo-img category-cover') %> 
 	           <div class="hero-phrase">
 	              <h1><%= @title %> </h1>
 	          </div>
 	 <% else %>
-           	<%= image_tag('cover-photo-min', class: 'cover-photo-img') %> 
+           	<%= image_tag('blurred-cover-photo', class: 'cover-photo-img') %> 
 	           <div class="hero-phrase">
 	           	<h1><%= @title %> </h1>
 	          	</div>
