--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
  * require_tree .
  *= require_self 
  */
+
 @import 'general/constants';
 @import 'general/general';
 @import 'general/media-queries';
@@ -23,6 +24,7 @@
 @import 'tags';
 @import 'posts';
 @import 'hero';
+@import 'search';
 @import 'cover';
 @import 'sidebar';
 @import 'login';
@@ -38,7 +40,8 @@
   width:100%;
   height:65px;
   position:fixed;
-  background-color:rgba(129,113,182,0.5);
+  background-color:rgba(129,113,182,0.6);
+  // background-color:rgba(0,0,0,0.6);
   box-shadow:0 0 90px 0 rgba(0,0,0,0.4);
   z-index:10;
   opacity: 0.98;
@@ -72,65 +75,6 @@
             }
       }
 }
-
-
-/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
-/* - - - - - - - - - - - - - - - - - - - - - - - -  Search Section - - - - - - - - - - - - - - - - - - - - - - - - - -  */
-/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
-
-.search-button {
-  display:none;
-  margin: 0 0 0 20px;
-  cursor:pointer;
-  padding: 0;
-  float: left;
-  width:200px;
-  height:65px;
-  line-height: 65px;
-  background-color:$lightpurple;
-    i {
-      margin-top:20px;
-      font-size:1.5rem;
-      padding-left: 20px;
-      color:$white;
-    }
-
-  @include breakpoint(medium) {
-    display:none;
-  }
-}
-
-.search-input {
-  position: absolute;
-  color:$white;
-  padding-left:10px;
-  border:none;
-  font-family:'Roboto',sans-serif;
-  background-color: rgba(0,0,0,0);
-  font-size: 1.2rem;
-  height:65px;
-  width:130px;
-  margin: 0;
-  line-height:65px;
-}
-
-::-webkit-input-placeholder {
-   font-family:'Roboto',sans-serif;
-   color: $white;
-   font-weight:200;
-}
-
-.search-input:focus {
-  outline:none;
-}
-
-.search-button:hover{
-  color:$white;
-}
-
-
-
-
 
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
 /* - - - - - - - - - - - - - - - - - - - - - - - - - -  Contribute  - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
