--- a/app/views/application/about.html.erb
+++ b/app/views/application/about.html.erb
@@ -1,7 +1,9 @@
-<div class="about-content">
-	<p>Pastry icing cookie tiramisu gingerbread macaroon pudding. Cupcake cake topping ice cream fruitcake caramels marzipan. Tart ice cream apple pie.</p>
-	<p>Sesame snaps chocolate liquorice. Sesame snaps lollipop gummies. Dessert sweet roll tart sesame snaps marshmallow gummi bears bear claw sweet. Cotton candy biscuit fruitcake gummies.</p>
-	<p>Candy sugar plum marshmallow. Halvah danish soufflé candy. Cupcake chocolate bar biscuit gingerbread wafer sweet roll bear claw croissant sugar plum.</p>
-	<p>Pie gingerbread apple pie lollipop chocolate bar. Toffee candy liquorice dragée. Oat cake bonbon jelly beans. Muffin tart chocolate jelly powder biscuit.</p>
-	<p>Muffin cupcake cheesecake apple pie jelly jujubes gummi bears topping tootsie roll. Pie pudding oat cake tart tiramisu jelly oat cake caramels bear claw. Dragée marzipan jelly beans wafer dragée pudding biscuit sugar plum.</p>
+<div class="about-content static-content">
+	<p>It is now easier than ever, thanks to all the incredible information available a few clicks away, to be like the master of autodictacticism, Leonardo Da Vinci.</p>
+	<p>The content itself comes from a range of YouTube creators, bloggers, video makers and online journalists. We owe a huge thanks to all of these creators who have allowed us to educate ourselves for the years gone, and for all the future knowledge that we personally will acquire through the internet.
+	      (This website itself was built and developed through free internet sources that taught us the basics of coding.) Please share, like, support and subscribe to all the content and sources that you've found informative and engaging.
+	<p>A library of inspiring, engaging and informative media, bringing together the very best of the freely available sources of education from all corners of the web (Mostly YouTube.) TEA is a nearly endless supply of enlightening content. </p>
+
+	<p>If you have any videos or articles that you think could be added to the archive or have any feedback about our website we'd love to hear from you. Drop us an email at: <br>
+	<a href="mailto:admin@eternalarchive.co.uk" target="_top" class="mail-to-about">admin@eternalarchive.co.uk</a></p>
 </div>
