--- a/app/views/application/copyright.html.erb
+++ b/app/views/application/copyright.html.erb
@@ -1,7 +1,3 @@
-<div class="copyright-content">
-	<p>Pastry icing cookie tiramisu gingerbread macaroon pudding. Cupcake cake topping ice cream fruitcake caramels marzipan. Tart ice cream apple pie.</p>
-	<p>Sesame snaps chocolate liquorice. Sesame snaps lollipop gummies. Dessert sweet roll tart sesame snaps marshmallow gummi bears bear claw sweet. Cotton candy biscuit fruitcake gummies.</p>
-	<p>Candy sugar plum marshmallow. Halvah danish soufflé candy. Cupcake chocolate bar biscuit gingerbread wafer sweet roll bear claw croissant sugar plum.</p>
-	<p>Pie gingerbread apple pie lollipop chocolate bar. Toffee candy liquorice dragée. Oat cake bonbon jelly beans. Muffin tart chocolate jelly powder biscuit.</p>
-	<p>Muffin cupcake cheesecake apple pie jelly jujubes gummi bears topping tootsie roll. Pie pudding oat cake tart tiramisu jelly oat cake caramels bear claw. Dragée marzipan jelly beans wafer dragée pudding biscuit sugar plum.</p>
+<div class="copyright-content static-content">
+	<p>Copyright Disclaimer Under Section 107 of the Copyright Act 1976, allowance is made for "fair use" for purposes such as criticism, comment, news reporting, teaching, scholarship, and research. Fair use is a use permitted by copyright statute that might otherwise be infringing. Non-profit, educational or personal use tips the balance in favor of fair use. All copyrighted materials contained herein belong to their respective copyright holders, I do not claim ownership over any of these materials. I realize no profit, monetary or otherwise, from the exhibition of these videos.</p>	
 </div>
