--- a/app/assets/stylesheets/_static_pages.scss
+++ b/app/assets/stylesheets/_static_pages.scss
@@ -13,6 +13,10 @@
       font-weight:300;
 }
 
+.static-content {
+      background-color: rgba(0,0,0,0.5);
+      padding: 20px;
+}
 
 .about-content, .contact-content, .help-content , .copyright-content {
       position: absolute;
@@ -24,9 +28,16 @@
       right:0;
       margin-left:auto;
       margin-right:auto;
+      font-weight: 200;
       
       @include breakpoint(small) {
-            width:50%
+            width:55%
 
       }
+}
+
+.mail-to-about {
+      color:$purple;
+      text-decoration: none;
+      
 }
