adding edit button for each post

--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -757,3 +757,17 @@ iframe {
   height: 100%;
 
 }
+
+// -------------------------------------------------------------------------------------------------------------------------------------------- //
+// -------------------------------------------------------- Edit button ------------------------------------------------------------------ //
+// -------------------------------------------------------------------------------------------------------------------------------------------- //
+
+.admin-edit-wrapper {
+  top: 35%;
+
+      a {
+            line-height: 40px ;
+            color: $white;
+            text-decoration: none;
+      }
+}
