--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -17,7 +17,7 @@
   </div>
 
   <div class="field">
-    <%= f.password_field :password, autocomplete: "off", placeholder: 'Password (8 charaters minimum)', class: 'password-field input'  %>
+    <%= f.password_field :password, autocomplete: "off", placeholder: 'Password (8 characters minimum)', class: 'password-field input'  %>
   </div>
 
   <div class="field">
