--- a/app/assets/stylesheets/_contributions.scss
+++ b/app/assets/stylesheets/_contributions.scss
@@ -1,3 +1,5 @@
+@import 'general/constants';
+
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
 /* - - - - - - - - - - - - - - - - - - - - Contribution Admin view - - - - - - - - - - - - - - - - - - - - - - - -  */
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
