adding destroy button and other bug fixes

--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -772,3 +772,19 @@ iframe {
             text-decoration: none;
       }
 }
+
+// -------------------------------------------------------------------------------------------------------------------------------------------- //
+// ----------------------------------------------------------- Destroy ------------------------------------------------------------------- //
+// -------------------------------------------------------------------------------------------------------------------------------------------- //
+
+.admin-destroy-button {
+  a {
+      color:$white;
+      text-decoration: underline;
+      
+      &:hover {
+        // text-decoration: none;
+        color:$lighterpurple;
+      }
+  }
+}
