--- a/app/views/application/about.html.erb
+++ b/app/views/application/about.html.erb
@@ -5,5 +5,5 @@
 	<p>A library of inspiring, engaging and informative media, bringing together the very best of the freely available sources of education from all corners of the web (Mostly YouTube.) TEA is a nearly endless supply of enlightening content. </p>
 
 	<p>If you have any videos or articles that you think could be added to the archive or have any feedback about our website we'd love to hear from you. Drop us an email at: <br>
-	<a href="mailto:admin@eternalarchive.co.uk" target="_top" class="mail-to-about">admin@eternalarchive.co.uk</a></p>
+	<a href="mailto:theteam@eternalarchive.co.uk" target="_top" class="mail-to-about">theteam@eternalarchive.co.uk</a></p>
 </div>
