--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -777,14 +777,35 @@ iframe {
 // ----------------------------------------------------------- Destroy ------------------------------------------------------------------- //
 // -------------------------------------------------------------------------------------------------------------------------------------------- //
 
-.admin-destroy-button {
-  a {
-      color:$white;
-      text-decoration: underline;
+.admin-destroy {
+   top: 35%;
+
+      a {
+            line-height: 45px ;
+            color: $white;
+            text-decoration: none;
+      }
+}
+
+// -------------------------------------------------------------------------------------------------------------------------------------------- //
+// --------------------------------------------------- Show Page Random --------------------------------------------------------- //
+// -------------------------------------------------------------------------------------------------------------------------------------------- //
+
+.random-button-show {
+  position: absolute;
+  top:0;
+  line-height: 65px;
+  text-align: center;
+  left: 0;
+  right: 0;
+  width:200px;
+  margin-right: auto;
+  margin-left: auto;
+  z-index:10;
+  color:$white;
+  text-decoration: none;
       
       &:hover {
-        // text-decoration: none;
         color:$lighterpurple;
       }
-  }
 }
