--- a/app/views/application/_home_cover.html.erb
+++ b/app/views/application/_home_cover.html.erb
@@ -18,6 +18,7 @@
                   <div class="hero-buttons center">
                         <%= link_to 'Latest Content' , posts_mostrecent_path , class: 'mostrecent-button' %>
                         <%= link_to 'Most Liked' , posts_topvids_path , class: 'topvid-button' %>
+                        <%= link_to 'Random!' , posts_random_path(post: "random") , class: 'random-button' %>
                   </div>
 
                   <div class="start-watching center">Start watching now</div>
