changes to the shuffle button

--- a/app/assets/stylesheets/_hero.scss
+++ b/app/assets/stylesheets/_hero.scss
@@ -90,7 +90,7 @@
   }
 }
 
-.topvid-button,.mostrecent-button , .random-button {
+.topvid-button,.mostrecent-button , .shuffle-button {
   font-size:1.2rem;
   position:relative;
   padding:10px;
