--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -12,6 +12,8 @@
           <%= render 'login' %>         
         
           <%= render 'submit' %>
-      
+          
+          <%= render 'random' %>
       </div>
 </div>
+
