--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,3 @@
-<% if params[:post] == "random" %>
-	<%= link_to 'Randomize Another!' , posts_random_path(post: "random") , class: 'random-button-show' %>
-<% end %>
 <div class="show-main-container">
 
 	<div class="buttons group">
@@ -17,7 +14,7 @@
 					<%= render 'bookmark', post: @post %>
 				</div>
 				
-				<% if params[:post] == "random" %>
+				<% if params[:post] == "shuffle" %>
 				<% else %>
 					 <% if current_user.try(:admin?) %>
 					            <div class="admin-destroy button">
