--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -79,11 +79,12 @@
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
 
 .contribute-section {
-  float: left;
+  float: right;
   text-align: center;
   display: none;
   margin-top: 25%;
   margin-bottom: 5%;
+  margin-right: 10px;
 
   @include breakpoint(small) {
     height:65px;
@@ -91,8 +92,7 @@
     display: block;
     margin-top: 0;
     margin-bottom: 0;
-    background-color: $lightpurple;
-    padding: 0 10px;
+    // background-color: $lightpurple;
   } 
   
   a {
@@ -158,9 +158,8 @@
       display: block;
       margin-top: 0;
       margin-bottom: 0;
-      margin-right: 20px;
-      background-color: $lightpurple;
-      padding: 0 10px;
+      margin-right: 10px;
+      // background-color: $lightpurple;
           
 
             a {
