--- a/app/views/application/_home_cover.html.erb
+++ b/app/views/application/_home_cover.html.erb
@@ -3,7 +3,7 @@
                 <div class="homepage-hero-module">
                   <div class="video-container">
                       <video autoplay loop class="fillWidth">
-                          <source src="assets/bulbs.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
+                          <!-- <source src="assets/bulbs.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser. -->
                       </video>
                   </div>
                   <div class="poster hidden">
@@ -17,8 +17,11 @@
 
                   <div class="hero-buttons center">
                         <%= link_to 'Latest Content' , posts_mostrecent_path , class: 'mostrecent-button' %>
-                        <%= link_to 'Most Liked' , posts_topvids_path , class: 'topvid-button' %>
-                        <%= link_to 'Shuffle' , posts_shuffle_path(p: "shuffle") , class: 'shuffle-button' %>
+                        <div class="home-like-section shifty">
+                            <%= link_to 'Most Liked' , posts_topvids_path , class: 'topvid-button' %>
+                            <%= image_tag("bulb-icon-1005064002-yellow.png", class: 'home-light-img')%>
+                        </div>
+                        <%= link_to 'Shuffle' , posts_shuffle_path(p: "shuffle") , class: 'shuffle-button wiggle' %>
                   </div>
 
                   <div class="start-watching center">Start watching now</div>
