--- a/app/views/application/_home_cover.html.erb
+++ b/app/views/application/_home_cover.html.erb
@@ -3,7 +3,7 @@
                 <div class="homepage-hero-module">
                   <div class="video-container">
                       <video autoplay loop class="fillWidth">
-                          <!-- <source src="assets/bulbs.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser. -->
+                          <source src="assets/bulbs.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
                       </video>
                   </div>
                   <div class="poster hidden">
