--- a/app/assets/stylesheets/general/_general.scss
+++ b/app/assets/stylesheets/general/_general.scss
@@ -3,7 +3,7 @@
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
 
 body {
-  background-color:$white;
+  background-color:#001;
   color:$white;
   margin:0;
   padding: 0;
@@ -21,6 +21,7 @@ body {
   
   @include breakpoint(large) {
     width: 1280px;
+    margin: 0 auto;
   }
 }
 
