--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,4 +1,6 @@
+
 <div class="header" onmouseover="document.body.style.overflow='hidden';" onmouseout="document.body.style.overflow='auto';">
+  <div class="wrapper">
       <div class="nav-down">
           <%= render 'logo' %>
         
@@ -15,5 +17,7 @@
           
           <%= render 'random' %>
       </div>
+      </div>
 </div>
+
 
