--- a/app/assets/stylesheets/general/_general.scss
+++ b/app/assets/stylesheets/general/_general.scss
@@ -19,10 +19,10 @@ body {
   margin: 0;
   width:100%;
   
-  @include breakpoint(large) {
-    width: 1280px;
-    margin: 0 auto;
-  }
+  // @include breakpoint(large) {
+  //   width: 1280px;
+  //   margin: 0 auto;
+  // }
 }
 
 .center {
