--- a/app/assets/stylesheets/_cover.scss
+++ b/app/assets/stylesheets/_cover.scss
@@ -64,8 +64,8 @@
         width:1500px;
       }
 
-      @import breakpoint(large) {
-        width:100%
+      @include breakpoint(large) {
+        width:100%;
       }
 }
 
