--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -15,7 +15,11 @@
         
           <%= render 'submit' %>
           
-          <%= render 'random' %>
+          <%= render 'latest' %>
+
+          <%= render 'liked_button' %>
+
+          <%= render 'shuffle' %>
       </div>
       </div>
 </div>
