--- a/app/views/application/_submit.html.erb
+++ b/app/views/application/_submit.html.erb
@@ -1,4 +1,4 @@
 <div class="contribute-section">
-      <%= link_to 'Contribute', submit_path, class: 'contribute-text' %>
+      <%= link_to 'CONTRIBUTE', submit_path, class: 'contribute-text' %>
       <!-- <i class="fa fa-plus contribute-button"></i> -->
 </div>
