--- a/app/views/application/_tags.html.erb
+++ b/app/views/application/_tags.html.erb
@@ -1,6 +1,6 @@
  <div class="tag-container center">
         <div class="tag-wrap">
-              <h3 class="tag-title">Tags</h3>
+              <h3 class="tag-title">TAGS</h3>
               <i class="fa fa-tags tags-button"></i>
         </div>
         <div class="category-tags center">   
