--- a/app/assets/stylesheets/_tags.scss
+++ b/app/assets/stylesheets/_tags.scss
@@ -74,7 +74,7 @@
   
   
     ul {
-      margin: 0 0 10px 0 ;
+      margin: 0 0 0 0 ;
       padding: 0 2% 2% 2%;
       width: 96%;               // Need to decide on using vh/vw ?????
       
@@ -84,16 +84,16 @@
       li {
         list-style:none;
         display:inline-block;
-        margin: 10px 5px;
+        margin: 5px;
         
          .selected {
           color:$teal;
           background-color:$white;
         }
         a {
-          font-size: 1.2rem;
-          padding: 10px;
-          border-radius: 3px; 
+          font-size: 1rem;
+          padding: 5px 10px;
+          border-radius: 5px; 
           text-decoration:none;
           color:$white;
           background-color:$teal;
