updates to nav bar and css files

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,9 +17,10 @@
 @import 'general/mixins';
 @import 'general/general';
 @import 'general/media-queries';
-@import 'contributions';
 @import 'shared/forms';
 @import 'shared/flash_messages';
+@import 'header';
+@import 'contributions';
 @import 'tags';
 @import 'posts';
 @import 'hero';
@@ -31,149 +32,3 @@
 @import 'static_pages';
 
 
-/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
-/* - - - - - - - - - - - - - - - - - - - - - - - -  Header / Logo - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
-/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
-
-.header {
-  width:100%;
-  height:65px;
-  position:fixed;
-  background-color:rgba(129,113,182,1);
-  // background-color:rgba(0,0,0,0.6);
-  box-shadow:0 0 90px 0 rgba(0,0,0,0.4);
-  z-index:10;
-  top: 0;
-  transition: top 0.5s ease-in-out;
-  width: 100%;
-}
-
-.nav-up {
-    top: -70px;
-}
-
-
-.header {
-     .logo {
-          float:left;
-          margin:0;
-          padding:0;
-          
-            img {
-              height: 30px;
-              padding: 18px 15px;
-              z-index: 6;
-              position: relative;
-              margin: 0;
-
-              @include breakpoint(small) {
-                height: 40px;
-                padding: 13px 15px;
-              }
-            }
-      }
-}
-
-/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
-/* - - - - - - - - - - - - - - - - - - - - - - - - - -  Contribute  - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
-/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
-
-.contribute-section {
-  float: right;
-  text-align: center;
-  display: none;
-  margin-top: 25%;
-  margin-bottom: 5%;
-  margin-right: 10px;
-
-  @include breakpoint(small) {
-    height:65px;
-    line-height: 65px;
-    display: block;
-    margin-top: 0;
-    margin-bottom: 0;
-    // background-color: $lightpurple;
-  } 
-  
-  a {
-      text-decoration:none;
-      color:$white;
-      font-size: 1rem;
-      font-weight: 300;
-      padding: 0px;
-      cursor:pointer;
-      
-      &:hover  {
-          color:$lighterpurple;
-        }
-
-      @include breakpoint(small) {
-        padding: 10px;
-        font-size: 0.8rem;
-      } 
-    }
-}  
-
-
-/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
-/* - - - - - - - - - - - - - - - - - - - - - - - -  Extra Button - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
-/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
-
-
-.extra-button {
-  top:0;
-  right:0;
-  margin-top:7px;
-  margin-right:10px;
-  cursor:pointer;
-  float:right;
-  padding:10px;
-  z-index:13;
-  color:$white;
-    
-    i {
-      font-size:1.8rem;
-    }
-
-    @include breakpoint(small) {
-      display: block;
-      margin-right: 20px;
-    } 
-}
-
-
-.extra-button:hover , .current-user:hover , .user-logout:hover , .user-login:hover {
-  color:$lighterpurple;
-}
-
-// -------------------------------------------------------------------------------------------------------------------------------------------- //
-// --------------------------------------------------- Show Page Random --------------------------------------------------------- //
-// -------------------------------------------------------------------------------------------------------------------------------------------- //
-.shuffle-section , .latest-section , .liked-section, .shuffle-section-header {
-      float: left;
-      text-align: center;
-      display: none;
-      height:65px;
-      line-height: 65px;
-      display: block;
-      margin: 0 10px;
-      // background-color: $lightpurple;
-          
-
-            a {
-                text-decoration:none;
-                color:$white;
-                font-size: 0.8rem;
-                font-weight: 300;
-                padding: 0px;
-                cursor:pointer;
-                            
-                  &:hover {
-                    color:$lighterpurple;
-                  }
-            }
-
-            .selected {
-                   text-decoration: underline overline;
-            }
-}
