adding edit button to shuffle page for admins

--- a/app/views/application/_login.html.erb
+++ b/app/views/application/_login.html.erb
@@ -14,6 +14,6 @@
                     </ul>
               </div>
     <%else%>
-          <%= link_to "Sign in / Sign up" , new_user_session_path,  class: 'user-login' %>
+          <%= link_to "LOG IN / SIGN UP" , new_user_session_path,  class: 'user-login' %>
     <% end %>
 </div> 
