--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,7 +14,7 @@
 					<%= render 'bookmark', post: @post %>
 				</div>
 				
-				<% if params[:post] == "shuffle" %>
+				<% if params[:p] == "shuffle" %>
 				<% else %>
 					 <% if current_user.try(:admin?) %>
 					            <div class="admin-destroy button">
@@ -22,6 +22,12 @@
 					            </div>
 					  <% end %>
 				  <% end %>
+
+				  <% if current_user.try(:admin?) %>
+				<div class="admin-edit-wrapper button">
+					<%= render 'edit_button', post: @post %>
+				</div>
+				<% end %>
 
 	</div>
 
